--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
  <html lang="en">
  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=fvvv, initial-scale=1.0">
+    <meta name="viewkhhort" content="width=fvvv, initial-scale=1.0">
     <title>Document</title>
  </head>
  <body>
