--- a/html/tela-login.html
+++ b/html/tela-login.html
@@ -14,6 +14,52 @@ Style principal: style-login
     <link rel="stylesheet" href="/styles/style-header.css">
 </head>
 <body>
+    <header>
+        <div id="aba-config">
+            <img class="header-icon" src="/img/settings.png">
+        </div>
+
+        <div id="lista-caminhos">
+            <a href="tela-abasocial.html">
+                <p class="caminho-lista-caminhos">
+                    Amigos
+                </p>
+            </a>
+
+            <a href="tela-eventos.html">
+                <p class="caminho-lista-caminhos">
+                    Eventos
+                </p>
+            </a>
+
+            <a href="tela-updtreinos.html">
+                <p class="caminho-lista-caminhos">
+                    Treinos
+                </p>
+            </a>
+
+            <a href="tela-calendario.html">
+                <p class="caminho-lista-caminhos">
+                    Calendario
+                </p>
+            </a>
+
+        </div>
+
+        <div id="notifica-inicio">
+
+            <a class="image-link" href="tela-notificacoes.html">
+                <img class="header-icon" src="/img/icone-de-sino-de-notificacao.jpg">
+            </a>
+
+
+            <a class="image-link" href="tela-principal.html">
+                <img class="header-icon" id="icon-logo" src="/img/Remove-bg.ai_1727815851170.png">
+            </a>
+
+            
+        </div>
+    </header>
     
 </body>
 </html>
