--- a/html/tela-inicial.html
+++ b/html/tela-inicial.html
@@ -14,6 +14,27 @@ Style principal: style-inicial
     <link rel="stylesheet" href="/styles/style-header.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+        <img src="/img/logo.png" alt="">
+        </div>
+        <nav>
+            <a href="#">Cadastrar</a>
+            <a href="#">Login</a>
+        </nav>
+    </header>
+
+    <main>
+        <div class="texto-principal">
+            <h1>Olá! Bem-Vindo ao <span>My Virtual Gym</span></h1>
+            <p>Estamos muito felizes por você ter se juntado a nós!</p>
+            <p>Aqui você irá encontrar maneiras motivadoras de alcançar seus objetivos.</p>
+            <p>Estamos aqui pra te ajudar a cada passo da sua evolução.</p>
+            <p><strong>Vamos Começar!</strong></p>
+            <img src="gym-icon.png" alt="Ícone de academia">
+        </div>
+    </main>
+
 </body>
 </html>
+
