--- a/html/tela-inicial.html
+++ b/html/tela-inicial.html
@@ -15,13 +15,28 @@ Style principal: style-inicial
 </head>
 <body>
     <header>
-        <div class="logo">
-        <img src="/img/logo.png" alt="">
+        <div id="aba-config">
+            <img class="header-icon" src="/img/settings.png">
         </div>
-        <nav>
-            <a href="#">Cadastrar</a>
-            <a href="#">Login</a>
-        </nav>
+
+        <div id="lista-caminhos">
+            <a href="tela-login.html">
+                <p class="caminho-lista-caminhos">
+                    Login
+                </p>
+            </a>
+
+            <a href="tela-cadastro.html">
+                <p class="caminho-lista-caminhos">
+                    Cadastrar
+                </p>
+            </a>
+        </div>
+            <a class="image-link"href="tela-abasocial.html">
+                <img class="header-icon" id="icon-logo" src="/img/logo.png" alt="">
+            </a>
+
+      
     </header>
 
     <main>
@@ -31,8 +46,11 @@ Style principal: style-inicial
             <p>Aqui você irá encontrar maneiras motivadoras de alcançar seus objetivos.</p>
             <p>Estamos aqui pra te ajudar a cada passo da sua evolução.</p>
             <p><strong>Vamos Começar!</strong></p>
-            <img src="gym-icon.png" alt="Ícone de academia">
+            <div>
+                <img src="/img/academia.png" alt="">
+            </div>
         </div>
+       
     </main>
 
 </body>
