--- a/html/tela-inicial.html
+++ b/html/tela-inicial.html
@@ -69,7 +69,7 @@ Style principal: style-inicial
 
     <main class="main-teste">
         <div class="texto-principal">
-            <h1>Olá! Bem-Vindo ao <span>My Virtual Gym</span></h1>
+            <h1>Olá! Bem-Vindo ao<span><br>My Gym</span></h1>
             <p>Estamos muito felizes por você ter se juntado a nós!</p>
             <p>Aqui você irá encontrar maneiras motivadoras de alcançar seus objetivos.</p>
             <p>Estamos aqui pra te ajudar a cada passo da sua evolução.</p>
