--- a/html/tela-login.html
+++ b/html/tela-login.html
@@ -14,29 +14,8 @@ Style principal: style-login
     <link rel="stylesheet" href="/styles/style-header.css">
 </head>
 <body>
-    <header>
-        <div id="aba-config">
-            <img class="header-icon" src="/img/settings.png" id="button-utilidades">
-        </div>
-
-        <div id="lista-caminhos">
-            <a href="tela-login.html">
-                <p class="caminho-lista-caminhos">
-                    Login
-                </p>
-            </a>
-
-            <a href="tela-cadastro.html">
-                <p class="caminho-lista-caminhos">
-                    Cadastrar
-                </p>
-            </a>
-        </div>
-            <a class="image-link"href="tela-abasocial.html">
-                <img class="header-icon" id="icon-logo" src="/img/logo.png" alt="">
-            </a>
-
-      
+    <header id="header-login">
+        <h1 id="my">MY GYM</h1>
     </header>
     <div class="aba-utilidades">
         <div class="utilit-item">
@@ -68,7 +47,6 @@ Style principal: style-login
     
 
     <main class="main-teste">
-        <h1>MY GYM</h1>
         <div>
             <form action="">
                 <label for="fname">E-mail:</label><br>
