--- a/html/tela-inicial.html
+++ b/html/tela-inicial.html
@@ -74,7 +74,7 @@ Style principal: style-inicial
             <p>Aqui você irá encontrar maneiras motivadoras de alcançar seus objetivos.</p>
             <p>Estamos aqui pra te ajudar a cada passo da sua evolução.</p>
             <p><strong>Vamos Começar!</strong></p>
-            <div>
+            <div id="logoacademia">
                 <img src="/img/academia.png" alt="">
             </div>
         </div>
