--- a/html/tela-cadastro.html
+++ b/html/tela-cadastro.html
@@ -85,6 +85,28 @@ Style principal: style-cadastro
  
 
     </div>
+    <main class="main-teste">
+        <div class="formulario">
+            <form action="">
+                <label for="email">E-mail:</label>
+                <input  class="dois" id="pessoa" type="text" id="fname" name="email"><br>
+                <label  for="lname">Senha:</label>
+                <input class="dois" id="cadeado" type="text" id="lname" name="lname"><br>
+                <label for="csenha">Confirmar senha:</label>
+                <input  class="dois" id="cadeado" type="text" id="fname" name="csenha"><br>
+                <label for="cell">Celular:</label>
+                <input  class="dois" type="text" id="fname" name="cell"><br>
+                <label for="nome">Nome do Usuário:</label>
+                <input  class="dois" type="text" id="fname" name="nome">
+                <input class="login"type="submit" value="Cadastrar">
+            </form>
+            <div class="conta">
+                <p>Já tem uma conta? Fazer Login</p>
+            </div>
+        </div>
+       
+
+    </main>
     <script src="/script/script-header.js"></script>
     
 </body>
