--- a/html/tela-cadastro.html
+++ b/html/tela-cadastro.html
@@ -14,49 +14,8 @@ Style principal: style-cadastro
     <link rel="stylesheet" href="/styles/style-header.css">
 </head>
 <body>
-    <header>
-        <div id="aba-config">
-            <img class="header-icon" src="/img/settings.png" id="button-utilidades">
-        </div>
-
-        <nav id="lista-caminhos">
-            <a href="tela-abasocial.html">
-                <p class="caminho-lista-caminhos">
-                    Amigos
-                </p>
-            </a>
-
-            <a href="tela-eventos.html">
-                <p class="caminho-lista-caminhos">
-                    Eventos
-                </p>
-            </a>
-
-            <a href="tela-updtreinos.html">
-                <p class="caminho-lista-caminhos">
-                    Treinos
-                </p>
-            </a>
-
-            <a href="tela-calendario.html">
-                <p class="caminho-lista-caminhos">
-                    Calendario
-                </p>
-            </a>
-
-        </nav>
-
-        <div id="notifica-inicio">
-
-            <a class="image-link" href="tela-notificacoes.html">
-                <img class="header-icon" src="/img/icone-de-sino-de-notificacao.jpg">
-            </a>
-
-
-            <a class="image-link" href="tela-principal.html">
-                <img class="header-icon" id="icon-logo" src="/img/logo.png">
-            </a>
-        </div>
+    <header class="header-login-cadastro">
+        <h1 id=my>Cadastrar</h1>
     </header>
     <div class="aba-utilidades">
         <div class="utilit-item">
