--- a/html/tela-login.html
+++ b/html/tela-login.html
@@ -9,9 +9,9 @@ Style principal: style-login
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Login</title>
-    <link rel="stylesheet" href="/styles/style-login.css">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/style-header.css">
+    <link rel="stylesheet" href="../styles/style-login.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/style-header.css">
 </head>
 <body>
     <header class="header-login-cadastro">
