--- a/html/tela-dados.html
+++ b/html/tela-dados.html
@@ -1,6 +1,6 @@
 <!--
 Agente: José ou Beatriz
-Style principal: style-dados
+Style principal: style-anede
 -->
 
 <!DOCTYPE html>
@@ -8,8 +8,8 @@ Style principal: style-dados
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela de dados</title>
-    <link rel="stylesheet" href="/styles/style-dodos.css">
+    <title>Tela de Antes e Depois</title>
+    <link rel="stylesheet" href="/styles/style-anede.css">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/style-header.css">
 </head>
@@ -85,7 +85,108 @@ Style principal: style-dados
  
 
     </div>
+    <main class="main-teste">
+        <section class="section-table">
+            <div class="div-table" id="div-table-first" >
+                <h1>
+                    Dados de Usuario
+                </h1>
+
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <td>Nome:</td>
+                        <td>fulano sicrano deltrano</td>
+                    </tr>
+
+                    <tr>
+                        <td>E-mail:</td>
+                        <td>fulado@gameil.com</td>
+                    </tr>
+
+                    <tr>
+                        <td>Telefone:</td>
+                        <td>+55 (69) 9999-9999</td>
+                    </tr>
+
+                    <tr>
+                        <td>Data de Nascimento:</td>
+                        <td>20/11/1802</td>
+                    </tr>
+
+                    <tr>
+                        <td>Data de Ingressão:</td>
+                        <td>21/11/1802</td>
+                    </tr>
+
+                </tbody>
+            </table>
+
+            </div>
+        </section>
+
+        <section class="section-photo-winst">
+            <div class="photo-winst-div">
+                <div class="photo">
+                    <img class="img-photo-winst" src="/img/Stickman.png" alt="">
+
+                </div>
+                <div class="winst">
+                    
+                    <img class="img-photo-winst" src="/img/academia.png" alt="" srcset="">
+                    <h1>Minha Sequência</h1>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="section-table" >
+            <div class="div-table" id="div-table-first" >
+                <h1>
+                    Dados Corporais
+                </h1>
+
+            <table class="table">
+                <tbody id="tbody-second" >
+                    <tr>
+                        <td>Altura:</td>
+                        <td>140cm</td>
+                    </tr>
+
+                    <tr>
+                        <td>Peso:</td>
+                        <td>100kg</td>
+                    </tr>
+
+                    <tr >
+                        <td>Ombro a Ombro:</td>
+                        <td>40cm</td>
+                    </tr>
+
+                    <tr class="tr-circun-1" >
+                        <td id="circun-line-1" colspan="2">Curcunferências</td>
+                    </tr>
+
+                    <tr id="tr-cirinfo-1">
+                        <td>
+                            <p class="p-cirinfo">Busto:  180cm</p> 
+                            <p class="p-cirinfo">Torax: 30cm</p>
+                            <p class="p-cirinfo">Biceps: 32cm</p>
+                            <p class="p-cirinfo">Triceps: 34cm</p>
+                            <p class="p-cirinfo"> Cintura: 60cm</p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            </div>
+
+        </section>
+
+
+    </main>
+
+    <script src="/script/script-circun.js"> </script>
     <script src="/script/script-header.js"></script>
-    
 </body>
 </html>
