--- a/html/tela-principal.html
+++ b/html/tela-principal.html
@@ -86,7 +86,50 @@ Style principal: style-principal
  
 
     </div>
+    <main class="main-teste">
+        <div class="div-table">
+            <h1>
+                Treino de Hoje
+            </h1>
+
+        <table class="table">
+            <tbody>
+                <tr>
+                    <td class="coiso">Máquina X</td>
+                    <td class="coiso">Musculos X</td>
+                </tr>
+
+                <tr>
+                    <td class="coiso">Máquina Z</td>
+                    <td class="coiso">Musculos Z</td>
+                </tr>
+
+                <tr>
+                    <td>Máquina Y</td>
+                    <td>Musculos Y</td>
+                </tr>
+
+                <tr>
+                    <td>Máquina W</td>
+                    <td>Musculos W</td>
+                </tr>
+
+                <tr>
+                    <td>Máquina P</td>
+                    <td>Musculos P</td>
+                </tr>
+                <tr id="trespontos">
+                    <td id="trespontos" colspan="2">...</td>
+
+                </tr>
+
+            </tbody>
+        </table>
+
+        </div>
+    </main>
     <script src="/script/script-header.js"></script>
+
     
 </body>
 </html>
