coisas de header

--- a/html/tela-antes-despois.html
+++ b/html/tela-antes-despois.html
@@ -87,6 +87,7 @@ Style principal: style-dados
     </div>
 
     <main class="main-teste">
+        <div class="escuro"></div>
         <section id="section-title"><H1>Atualização/Evolução</H1></section>
         <section class="section-table" >
             <div class="div-table" id="div-table-first" >
