--- a/html/tela-dados.html
+++ b/html/tela-dados.html
@@ -86,6 +86,7 @@ Style principal: style-anede
 
     </div>
     <main class="main-teste">
+        <div class="escuro"></div>
         <section class="section-table">
             <div class="div-table" id="div-table-first" >
                 <h1>
