--- a/html/tela-antes-despois.html
+++ b/html/tela-antes-despois.html
@@ -9,9 +9,9 @@ Style principal: style-dados
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de dados</title>
-    <link rel="stylesheet" href="/styles/style-dados.css">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/style-header.css">
+    <link rel="stylesheet" href="../styles/style-dados.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/style-header.css">
 </head>
 <body>
     <header>
@@ -176,11 +176,11 @@ Style principal: style-dados
 
                     <tr id="tr-cirinfo-2">
                         <td>
-                            <p class="p-cirinfo">Busto:  180cm</p> 
+                            <p class="p-cirinfo">Peitoral:  180cm</p> 
                             <p class="p-cirinfo">Torax: 30cm</p>
-                            <p class="p-cirinfo">Biceps: 32cm</p>
-                            <p class="p-cirinfo">Triceps: 34cm</p>
-                            <p class="p-cirinfo"> Cintura: 60cm</p>
+                            <p class="p-cirinfo">Braço: 32cm</p>
+                            <p class="p-cirinfo">Abdomen: 34cm</p>
+                            <p class="p-cirinfo"> Panturilha: 60cm</p>
                         </td>
                     </tr>
                 </tbody>
@@ -192,8 +192,8 @@ Style principal: style-dados
 
 
     </main>
-    <script src="/script/script-header.js"></script>
-    <script src="/script/script-circun.js"> </script>
+    <script src="../script/script-header.js"></script>
+    <script src="../script/script-circun.js"> </script>
     
 </body>
 </html>
