--- a/html/tela-cadastro.html
+++ b/html/tela-cadastro.html
@@ -9,9 +9,9 @@ Style principal: style-cadastro
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Cadastro</title>
-    <link rel="stylesheet" href="/styles/style-cadastro.css">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/style-header.css">
+    <link rel="stylesheet" href="../styles/style-cadastro.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/style-header.css">
 </head>
 <body>
     <header class="header-login-cadastro">
@@ -66,7 +66,7 @@ Style principal: style-cadastro
        
 
     </main>
-    <script src="/script/script-header.js"></script>
+    <script src="../script/script-header.js"></script>
     
 </body>
 </html>
