--- a/html/tela-eventos.html
+++ b/html/tela-eventos.html
@@ -9,9 +9,9 @@ Style principal: style-eventos
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Eventos</title>
-    <link rel="stylesheet" href="/styles/style-eventos.css">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/style-header.css">
+    <link rel="stylesheet" href="../styles/style-eventos.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/style-header.css">
 </head>
 <body>
     <header>
@@ -86,8 +86,9 @@ Style principal: style-eventos
 
     </div>
     <main class="main-teste">
-        <div class="div-principal">
         
+        <div class="div-principal">
+            <div class="escuro"></div>
             <section class="relo-cale-dia" >
                 <div class="calendario">
                     <div class="calendario-conteudo">
@@ -171,8 +172,8 @@ Style principal: style-eventos
             </section>
         </div>
     </main>
-    <script src="/script/script-header.js"></script>
-    <script src="/script/script-clock.js"></script>
+    <script src="../script/script-header.js"></script>
+    <script src="../script/script-clock.js"></script>
     
 </body>
 </html>
