--- a/html/tela-dados.html
+++ b/html/tela-dados.html
@@ -9,9 +9,9 @@ Style principal: style-anede
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Antes e Depois</title>
-    <link rel="stylesheet" href="/styles/style-anede.css">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/style-header.css">
+    <link rel="stylesheet" href="../styles/style-anede.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/style-header.css">
 </head>
 <body>
     <header>
@@ -187,7 +187,7 @@ Style principal: style-anede
 
     </main>
 
-    <script src="/script/script-circun.js"> </script>
-    <script src="/script/script-header.js"></script>
+    <script src="../script/script-circun.js"> </script>
+    <script src="../script/script-header.js"></script>
 </body>
 </html>
