--- a/html/tela-inicial.html
+++ b/html/tela-inicial.html
@@ -16,7 +16,7 @@ Style principal: style-inicial
 <body>
     <header>
         <div id="aba-config">
-            <img class="header-icon" src="/img/settings.png" id="button-utilidades">
+            <img class="header-icon" src="../img/settings.png" id="button-utilidades">
         </div>
 
         <div id="lista-caminhos">
@@ -33,7 +33,7 @@ Style principal: style-inicial
             </a>
         </div>
             <a class="image-link"href="tela-abasocial.html">
-                <img class="header-icon" id="icon-logo" src="/img/logo.png" alt="">
+                <img class="header-icon" id="icon-logo" src="../img/logo.png" alt="">
             </a>
 
       
@@ -78,7 +78,7 @@ Style principal: style-inicial
             <p>Estamos aqui pra te ajudar a cada passo da sua evolução.</p>
             <p><strong>Vamos Começar!</strong></p>
             <div id="logoacademia">
-                <img src="/img/academia.png" alt="">
+                <img src="../img/academia.png" alt="">
             </div>
         </div>
        
