--- a/html/tela-antes-despois.html
+++ b/html/tela-antes-despois.html
@@ -16,7 +16,7 @@ Style principal: style-dados
 <body>
     <header>
         <div id="aba-config">
-            <img class="header-icon" src="/img/settings.png" id="button-utilidades">
+            <img class="header-icon" src="../img/settings.png" id="button-utilidades">
         </div>
 
         <nav id="lista-caminhos">
@@ -49,12 +49,12 @@ Style principal: style-dados
         <div id="notifica-inicio">
 
             <a class="image-link" href="tela-notificacoes.html">
-                <img class="header-icon" src="/img/icone-de-sino-de-notificacao.jpg">
+                <img class="header-icon" src="../img/icone-de-sino-de-notificacao.jpg">
             </a>
 
 
             <a class="image-link" href="tela-principal.html">
-                <img class="header-icon" id="icon-logo" src="/img/logo.png">
+                <img class="header-icon" id="icon-logo" src="../img/logo.png">
             </a>
         </div>
     </header>
@@ -135,12 +135,12 @@ Style principal: style-dados
         <section class="section-photo-winst">
             <div class="photo-winst-div">
                 <div class="photo">
-                    <img class="img-photo-winst" src="/img/Stickman.png" alt="">
+                    <img class="img-photo-winst" src="../img/Stickman.png" alt="">
 
                 </div>
                 <div class="winst">
                     
-                    <img class="img-photo-winst" src="/img/academia.png" alt="" srcset="">
+                    <img class="img-photo-winst" src="../img/academia.png" alt="" srcset="">
                     <h1>Minha Sequência</h1>
                 </div>
 
