--- a/html/tela-eventos.html
+++ b/html/tela-eventos.html
@@ -16,7 +16,7 @@ Style principal: style-eventos
 <body>
     <header>
         <div id="aba-config">
-            <img class="header-icon" src="/img/settings.png" id="button-utilidades">
+            <img class="header-icon" src="../img/settings.png" id="button-utilidades">
         </div>
 
         <nav id="lista-caminhos">
@@ -49,12 +49,12 @@ Style principal: style-eventos
         <div id="notifica-inicio">
 
             <a class="image-link" href="tela-notificacoes.html">
-                <img class="header-icon" src="/img/icone-de-sino-de-notificacao.jpg">
+                <img class="header-icon" src="../img/icone-de-sino-de-notificacao.jpg">
             </a>
 
 
             <a class="image-link" href="tela-principal.html">
-                <img class="header-icon" id="icon-logo" src="/img/logo.png">
+                <img class="header-icon" id="icon-logo" src="../img/logo.png">
             </a>
         </div>
     </header>
