--- a/html/tela-login.html
+++ b/html/tela-login.html
@@ -57,7 +57,7 @@ Style principal: style-login
                 <div id="button-submit-div" ><input id="submit-button" class="login"type="submit" value="Login" ></div>
             </form>
             <div class="conta">
-                <p>Ainda não tem conta? Criar conta</p>
+                <p>Ainda não tem conta?<a class="link" href="/html/tela-cadastro.html"> Criar conta</a></p>
             </div>
        
         </div>
