--- a/html/tela-agente.html
+++ b/html/tela-agente.html
@@ -14,6 +14,22 @@ Style principal: style-agenda
     <link rel="stylesheet" href="/styles/style-header.css">
 </head>
 <body>
+    <!-- Conteúdo da página -->
+  <div class="agenda">Agenda</div>
+  <div class="container">
+    <div class="inputs">
+      <input type="text" placeholder="Segunda-feira:">
+      <input type="text" placeholder="Terça-feira:">
+      <input type="text" placeholder="Quarta-feira:">
+      <input type="text" placeholder="Quinta-feira:">
+      <input type="text" placeholder="Sexta-feira:">
+      <input type="text" placeholder="Sábado (1):">
+      <input type="text" placeholder="Domingo:">
+    </div>
+  </div>
+
+</body>
+</html>    
     <header>
         <div id="aba-config">
             <img class="header-icon" src="/img/settings.png" id="button-utilidades">
