--- a/html/tela-cadastro.html
+++ b/html/tela-cadastro.html
@@ -63,7 +63,7 @@ Style principal: style-cadastro
                 <div id="button-submit-div"><input id="submit-button" class="login"type="submit" value="Cadastrar"></div>
             </form>
             <div class="conta">
-                <p>Já tem uma conta? <a href="/html/tela-login.html" class="link">Fazer Login</a></p>
+                <p>Já tem uma conta? <a href="tela-login.html" class="link">Fazer Login</a></p>
             </div>
         </div>
        
