--- a/html/tela-abasocial.html
+++ b/html/tela-abasocial.html
@@ -59,6 +59,7 @@ Style principal: style-abasocial
 </header>
 <div class="escuro"></div>
 <div class="aba-utilidades">
+    <body>
 
     <div class="utilit-item">
         <svg class="item-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M3 5C2.44772 5 2 5.44771 2 6V18C2 18.5523 2.44772 19 3 19H21C21.5523 19 22 18.5523 22 18V6C22 5.44772 21.5523 5 21 5H3ZM0 6C0 4.34315 1.34314 3 3 3H21C22.6569 3 24 4.34315 24 6V18C24 19.6569 22.6569 21 21 21H3C1.34315 21 0 19.6569 0 18V6ZM6 10.5C6 9.67157 6.67157 9 7.5 9C8.32843 9 9 9.67157 9 10.5C9 11.3284 8.32843 12 7.5 12C6.67157 12 6 11.3284 6 10.5ZM10.1756 12.7565C10.69 12.1472 11 11.3598 11 10.5C11 8.567 9.433 7 7.5 7C5.567 7 4 8.567 4 10.5C4 11.3598 4.31002 12.1472 4.82438 12.7565C3.68235 13.4994 3 14.7069 3 16C3 16.5523 3.44772 17 4 17C4.55228 17 5 16.5523 5 16C5 15.1145 5.80048 14 7.5 14C9.19952 14 10 15.1145 10 16C10 16.5523 10.4477 17 11 17C11.5523 17 12 16.5523 12 16C12 14.7069 11.3177 13.4994 10.1756 12.7565ZM13 8C12.4477 8 12 8.44772 12 9C12 9.55228 12.4477 10 13 10H19C19.5523 10 20 9.55228 20 9C20 8.44772 19.5523 8 19 8H13ZM14 12C13.4477 12 13 12.4477 13 13C13 13.5523 13.4477 14 14 14H18C18.5523 14 19 13.5523 19 13C19 12.4477 18.5523 12 18 12H14Z" fill="#ffffff"></path> </g></svg>
@@ -85,7 +86,7 @@ Style principal: style-abasocial
     </div>
     <div class="utilit-item">
         <svg class="item-icon" width="16px" height="16px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M7 8C7 6.89543 7.89543 6 9 6H15C16.1046 6 17 6.89543 17 8V10C17 11.1046 16.1046 12 15 12H9C7.89543 12 7 11.1046 7 10V8ZM9 8H15V10H9V8Z" fill="#ffffff"></path> <path fill-rule="evenodd" clip-rule="evenodd" d="M5 1C3.89543 1 3 1.89543 3 3V21C3 22.1046 3.89543 23 5 23H17C19.2091 23 21 21.2091 21 19V5C21 2.79086 19.2091 1 17 1H5ZM5 4C5 3.44772 5.44772 3 6 3H17C18.1046 3 19 3.89543 19 5V19C19 20.1046 18.1046 21 17 21H6C5.44772 21 5 20.5523 5 20V4Z" fill="#ffffff"></path> </g></svg>
-        <a href="tela-antes-despois.html" class="item-text">Agenda</a>
+        <a href="tela-agenda.html" class="item-text">Agenda</a>
     </div>
 
 </div>
@@ -109,10 +110,10 @@ Style principal: style-abasocial
             </div>
             <div class="suggestions">
                 <div class="suggestion-title">pessoas que você talvez conheça</div>
-                <div class="suggestion-card"><span>fulano</span><div class="user-icon">👤</div></div>
-                <div class="suggestion-card"><span>bertano</span><div class="user-icon">👤</div></div>
-                <div class="suggestion-card"><span>ciclano</span><div class="user-icon">👤</div></div>
-                <div class="suggestion-card highlighted"><span>vovô chao</span><div class="user-icon">👤</div></div>
+                <div class="suggestion-card"><a href="tela-chats.html" style="color: black;" class="span">fulano</a><div class="user-icon">👤</div></div>
+                <div class="suggestion-card"><a href="tela-chats.html" style="color: black;" class="span" >bertano</a><div class="user-icon">👤</div></div>
+                <div class="suggestion-card"><a href="tela-chats.html" style="color: black;" class="span">ciclano</a><div class="user-icon">👤</div></div>
+                <div class="suggestion-card highlighted"><a href="tela-chats.html" style="color: black;" class="span">vovô chao</a><div class="user-icon">👤</div></div>
             </div>
         </div>
     </div>
