--- a/html/tela-abasocial.html
+++ b/html/tela-abasocial.html
@@ -9,13 +9,13 @@ Style principal: style-abasocial
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Aba Social</title>
-    <link rel="stylesheet" href="/styles/style-abasocial.css">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/style-header.css">
+    <link rel="stylesheet" href="../styles/style-abasocial.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/style-header.css">
 </head>
 <header>
     <div id="aba-config">
-        <img class="header-icon" src="/img/settings.png" id="button-utilidades">
+        <img class="header-icon" src="../img/settings.png" id="button-utilidades">
     </div>
 
     <nav id="lista-caminhos">
@@ -48,12 +48,12 @@ Style principal: style-abasocial
     <div id="notifica-inicio">
 
         <a class="image-link" href="tela-notificacoes.html">
-            <img class="header-icon" src="/img/icone-de-sino-de-notificacao.jpg">
+            <img class="header-icon" src="../img/icone-de-sino-de-notificacao.jpg">
         </a>
 
 
         <a class="image-link" href="tela-principal.html">
-            <img class="header-icon" id="icon-logo" src="/img/logo.png">
+            <img class="header-icon" id="icon-logo" src="../img/logo.png">
         </a>
     </div>
 </header>
@@ -119,7 +119,7 @@ Style principal: style-abasocial
     </div>
 </main>
 
-    <script src="/script/script-header.js"></script>
+    <script src="../script/script-header.js"></script>
     
 </body>
 </html>
