--- a/html/tela-agenda.html
+++ b/html/tela-agenda.html
@@ -9,9 +9,9 @@ Style principal: style-agenda
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Agenda</title>
-    <link rel="stylesheet" href="/styles/style-agenda.css">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/style-header.css">
+    <link rel="stylesheet" href="../styles/style-agenda.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/style-header.css">
 </head>
 <body>
     <header>
