--- a/html/tela-abasocial.html
+++ b/html/tela-abasocial.html
@@ -90,6 +90,9 @@ Style principal: style-abasocial
     </div>
 
 </div>
+<body>
+    
+
 <main class="main-teste">
      <!-- Interface Dividida em Esquerda e Direita -->
      <div class="container">
@@ -118,6 +121,7 @@ Style principal: style-abasocial
         </div>
     </div>
 </main>
+
 
     <script src="../script/script-header.js"></script>
     
